--- a/application/src/main/resources/i18n/messages.properties
+++ b/application/src/main/resources/i18n/messages.properties
@@ -1,5 +1,5 @@
-test.message.subject=Test message from Thingsboard
-activation.subject=Your account activation on Thingsboard
-account.activated.subject=Thingsboard - your account has been activated
-reset.password.subject=Thingsboard - Password reset has been requested
-password.was.reset.subject=Thingsboard - your account password has been reset
+test.message.subject=Test message
+activation.subject=Your account activation on BeiDouApp
+account.activated.subject=BeiDouApp - your account has been activated
+reset.password.subject=BeiDouApp - Password reset has been requested
+password.was.reset.subject=BeiDouApp - your account password has been reset
